:recycle: Refatoração modulo 20